--- a/miri_1028_dolphot.ipynb
+++ b/miri_1028_dolphot.ipynb
@@ -319,7 +319,7 @@
    "id": "28d1d25f",
    "metadata": {},
    "source": [
-    "Go to the terminal and move to the folder where the level 2 files are located. Run the pre-processing steps: mirimask, splitgroups and calcsky. Use calcsky parameters \n",
+    "Go to the terminal and move to the folder where the level 2 files are located. Ensure you have the PSFs for all MIRI filters you will be working with loaded in to the dolphot directory. Run the pre-processing steps: mirimask, splitgroups and calcsky. Use calcsky parameters \n",
     "### rin=10 rout=25 step=4 sigmalow=2.25 sigmahigh=2 \n"
    ]
   },
