--- a/miri_1028_dolphot.ipynb
+++ b/miri_1028_dolphot.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# MIRI PSF Photometry With Space_Phot\n",
     "\n",
-    "**Author**: Ori Fox+Raphael Baer-Way)\n",
+    "**Author**: Ori Fox+Raphael Baer-Way\n",
     "<br>\n",
     "**Last Updated**: August, 2023"
    ]
