--- a/miri_1028_dolphot.ipynb
+++ b/miri_1028_dolphot.ipynb
@@ -311,7 +311,7 @@
    "id": "098382f2",
    "metadata": {},
    "source": [
-    "Now that we have all the data and have examined our source, we can proceed to running dolphot. For a general guide on installation/how to get things up and running refer here: https://github.com/18rway/dolphot "
+    "Now that we have all the data and have examined our source, we can proceed to running dolphot. Make sure you do not run any code altering the original fits files before running dolphot. For a general guide on installation/how to get things up and running refer here: https://github.com/18rway/dolphot "
    ]
   },
   {
