--- a/miri_1028_dolphot.ipynb
+++ b/miri_1028_dolphot.ipynb
@@ -941,7 +941,7 @@
     "norm1 = simple_norm(ref_cutout,stretch='linear',min_cut=-1,max_cut=10)\n",
     "plt.imshow(ref_cutout, origin='lower',\n",
     "                      norm=norm1,cmap='gray')\n",
-    "plt.title('PID1028,Obs006')\n",
+    "plt.title('PID1171')\n",
     "plt.gca().tick_params(labelcolor='none',axis='both',color='none')\n",
     "plt.show()"
    ]
